# GamilAutomation

./: .gitignore  LICENSE  README.md  demo.py  logger.py  main.py  pyproject.toml
GmailAutomation/: auth.py  db.py  dummydata.py
GmailAutomation/InsertionPipeline/: dummydata.py  sendEmail.py
GmailAutomation/LLM/: EmailAgent.py  ResponseDesign.py
GmailAutomation/RetrivalPipeline/: db.py  schedular.py
GmailAutomation/demo/: demo.py  sendMail.py
